// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthConfigMasterPanel/> Editable mode 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <span
      className="bold-text"
    >
       Configurations 
    </span>
  </div>
  <div
    className="panel-body"
  >
    <a
      className="configurations__help-link"
    >
      Get help with authentication
    </a>
    <div
      id="tab-panel"
    >
      <ul
        className="nav nav-tabs"
        role="tablist"
      >
        <li
          className="active"
          role="presentation"
        >
          <a
            aria-controls="tab-panel-pane-1"
            aria-selected={true}
            href="#"
            id="tab-panel-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
          >
            Primary
          </a>
        </li>
        <li
          className=""
          role="presentation"
        >
          <a
            aria-controls="tab-panel-pane-2"
            aria-selected={false}
            href="#"
            id="tab-panel-tab-2"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
          >
            Secondary
          </a>
        </li>
      </ul>
      <div
        className="tab-content"
      >
        <div
          aria-hidden={false}
          aria-labelledby="tab-panel-tab-1"
          className="fade tab-pane active in"
          id="tab-panel-pane-1"
          role="tabpanel"
        >
          <div
            className="configurations__auth-tab"
          >
            <div
              className="configurations__dropdown"
            >
              <div
                className="dropdown btn-group"
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="dropdown-toggle btn btn-default"
                  disabled={false}
                  id="primary-configurations-dropdown"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  type="button"
                >
                  Add New Primary Configuration
                   
                  <span
                    className="caret"
                  />
                </button>
                <ul
                  aria-labelledby="primary-configurations-dropdown"
                  className="dropdown-menu"
                  role="menu"
                />
              </div>
            </div>
            <div
              className="configurations__config-section-title"
            >
              <span
                className="bold-text"
              >
                 Login Form Configurations 
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                  data-icon="question-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </div>
            <div />
          </div>
          <div>
            <div
              className="configurations__config-section-title"
            >
              <span
                className="bold-text"
              >
                 Single Sign On Configurations 
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                  data-icon="question-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </div>
            <div />
          </div>
        </div>
        <div
          aria-hidden={true}
          aria-labelledby="tab-panel-tab-2"
          className="fade tab-pane"
          id="tab-panel-pane-2"
          role="tabpanel"
        >
          <div
            className="configurations__auth-tab"
          >
            <div
              className="configurations__dropdown"
            >
              <div
                className="dropdown btn-group"
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="dropdown-toggle btn btn-default"
                  disabled={false}
                  id="secondary-configurations-dropdown"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  type="button"
                >
                  Add New Secondary Configuration
                   
                  <span
                    className="caret"
                  />
                </button>
                <ul
                  aria-labelledby="secondary-configurations-dropdown"
                  className="dropdown-menu"
                  role="menu"
                />
              </div>
            </div>
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AuthConfigMasterPanel/> View-only mode 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <span
      className="bold-text"
    >
       Configurations 
    </span>
  </div>
  <div
    className="panel-body"
  >
    <a
      className="configurations__help-link"
    >
      Get help with authentication
    </a>
    <div
      id="tab-panel"
    >
      <ul
        className="nav nav-tabs"
        role="tablist"
      >
        <li
          className="active"
          role="presentation"
        >
          <a
            aria-controls="tab-panel-pane-1"
            aria-selected={true}
            href="#"
            id="tab-panel-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
          >
            Primary
          </a>
        </li>
        <li
          className=""
          role="presentation"
        >
          <a
            aria-controls="tab-panel-pane-2"
            aria-selected={false}
            href="#"
            id="tab-panel-tab-2"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
          >
            Secondary
          </a>
        </li>
      </ul>
      <div
        className="tab-content"
      >
        <div
          aria-hidden={false}
          aria-labelledby="tab-panel-tab-1"
          className="fade tab-pane active in"
          id="tab-panel-pane-1"
          role="tabpanel"
        >
          <div
            className="configurations__auth-tab"
          >
            <div
              className="configurations__config-section-title"
            >
              <span
                className="bold-text"
              >
                 Login Form Configurations 
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                  data-icon="question-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </div>
            <div />
          </div>
          <div>
            <div
              className="configurations__config-section-title"
            >
              <span
                className="bold-text"
              >
                 Single Sign On Configurations 
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                  data-icon="question-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </div>
            <div />
          </div>
        </div>
        <div
          aria-hidden={true}
          aria-labelledby="tab-panel-tab-2"
          className="fade tab-pane"
          id="tab-panel-pane-2"
          role="tabpanel"
        >
          <div
            className="configurations__auth-tab"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
